--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -100,4 +100,10 @@
     @apply font-sfpro;
     color: rgba(255, 255, 255, 0.7);
   }
+
+  .permanent-marker-regular {
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }  
 }
